--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Luca Mozzo</title>
+    <script src="lib/jquery-1.12.0.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="lib/jquery-1.12.0.min.js"></script>
     <script src="script/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheet/index.css">
 </head>
 <body>
     <!-- navbar -->
@@ -15,9 +16,9 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Luca Mozzo</a>
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li class=""><a href="#">Projects</a></li>
-                    <li class=""><a href="#">Contact me</a></li>
+                    <li class="active"><a data-href="home.html" href="#">Home</a></li>
+                    <li class=""><a data-href="projects.html" href="#">Projects</a></li>
+                    <li class=""><a data-href="contacts.html" href="#">Contact me</a></li>
                 </ul>
                 <!-- Search form -->
                 <form class="navbar-form navbar-right">
@@ -31,5 +32,6 @@
             </div>
         </nav>
     </header>
+    <div class="body-container"></div>
 </body>
 </html>
