--- a/home.html
+++ b/home.html
@@ -6,6 +6,15 @@
 <body>
 <div class = "col-sm-8 center col-md-8 col-md-offset-2">
     <h1>Hello, folks!</h1>
+    <p>Let me introduce myself, I'll just say a couple of things you may find interesting...</p>
+    <img src="" alt="myphoto" />
+    <p>I'm a 19-year-old Italian student. I studied Electronics an Systems and Automation at secondary school in Italy, then I moved
+        to London. I've been studying Computer Science with Intelligent Systems at King's College London since September 2015.
+    </p>
+    <blockquote>This way is too boring. Just give me another chance...</blockquote>
+    <p>I have too many interests, and this often means making decisions about what to choose. I like artificial intelligence, security,
+         cryptography, electronics and algorithms, all topped with some programming of course. I'm not going to say <strong>which</strong> 
+         programming languages I'm particularly confident with, unless you actually want to <a href="#">take a look</a> to them.</p>
     <!--<div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title">Who the hell are you?</h3>
