--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <a class="navbar-brand" href="#">Luca Mozzo</a>
                 <ul class="nav navbar-nav">
                     <li class="active"><a data-href="home.html" href="#">Home</a></li>
+                    <li class=""><a data-href="skills.html" href="#">Skills</a></li>
                     <li class=""><a data-href="projects.html" href="#">Projects</a></li>
                     <li class=""><a data-href="contacts.html" href="#">Contact me</a></li>
                 </ul>
