--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <blockquote>This way is too boring. Just give me another chance...</blockquote>
     <p>I have too many interests, and this often means making decisions about what to choose. I like artificial intelligence, security,
          cryptography, electronics and algorithms, all topped with some programming of course. I'm not going to say <strong>which</strong> 
-         programming languages I'm particularly confident with, unless you actually want to <a href="#">take a look</a> to them.</p>
+         programming languages I'm particularly confident with, unless you actually want to <a href="#" id="goto-skills">take a look</a> at them.</p>
     <!--<div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title">Who the hell are you?</h3>
