added script home

--- a/home.html
+++ b/home.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="lib/jquery-1.12.0.min.js"></script>
+    <script src="script/home.js"></script>
 </head>
 <body>
 <div class = "col-sm-8 center col-md-8 col-md-offset-2">
