--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <div class = "col-sm-8 center col-md-8 col-md-offset-2">
     <h1>Hello, folks!</h1>
     <p>Let me introduce myself, I'll just say a couple of things you may find interesting...</p>
-    <img src="" alt="myphoto" />
+    <img src="media/prof_pic.jpg" alt="myphoto" />
     <p>I'm a 19-year-old Italian student. I studied Electronics an Systems and Automation at secondary school in Italy, then I moved
         to London. I've been studying Computer Science with Intelligent Systems at King's College London since September 2015.
     </p>
