home graphics improved

--- a/home.html
+++ b/home.html
@@ -4,19 +4,26 @@
     <meta charset="UTF-8">
     <script src="lib/jquery-1.12.0.min.js"></script>
     <script src="script/home.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheet/home.css">
 </head>
 <body>
 <div class = "col-sm-8 center col-md-8 col-md-offset-2">
     <h1>Hello, folks!</h1>
-    <p>Let me introduce myself, I'll just say a couple of things you may find interesting...</p>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">Let me introduce myself, I'll just say a couple of things you may find interesting...</h3>
+        </div>
+        <div class="panel-body">
     <img src="media/prof_pic.jpg" alt="myphoto" />
     <p>I'm a 19-year-old Italian student. I studied Electronics an Systems and Automation at secondary school in Italy, then I moved
         to London. I've been studying Computer Science with Intelligent Systems at King's College London since September 2015.
     </p>
-    <blockquote>This way is too boring. Just give me another chance...</blockquote>
+    <blockquote>Let's go deeper into details and make things more interesting</blockquote>
     <p>I have too many interests, and this often means making decisions about what to choose. I like artificial intelligence, security,
          cryptography, electronics and algorithms, all topped with some programming of course. I'm not going to say <strong>which</strong> 
          programming languages I'm particularly confident with, unless you actually want to <a href="#" id="goto-skills">take a look</a> at them.</p>
+        </div>
+    </div>
     <!--<div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title">Who the hell are you?</h3>
