new solution for internal navigation

--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheet/home.css">
 </head>
 <body>
+    <div class="body-container">
 <div class = "col-sm-8 center col-md-8 col-md-offset-2">
     <h1>Hello, folks!</h1>
     <div class="panel panel-primary">
@@ -30,6 +31,7 @@
         </div>
         <div class="panel-body">Good question, let me introduce!</div>
     </div>-->
+</div>
 </div>
 </body>
 </html>
