--- a/index.html
+++ b/index.html
@@ -14,15 +14,24 @@
 <body>
     <!-- navbar -->
     <header>
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default">   
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Luca Mozzo</a>
-                <ul class="nav navbar-nav">
-                    <li class="active"><a data-href="home.html" href="#">Home</a></li>
-                    <li class=""><a data-href="skills.html" href="#">Skills</a></li>
-                    <li class=""><a data-href="projects.html" href="#">Projects</a></li>
-                    <li class=""><a data-href="contacts.html" href="#">Contact me</a></li>
-                </ul>
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                     <a class="navbar-brand" href="#">Luca Mozzo</a>
+                    </div>
+                <div class="collapse navbar-collapse" id="navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a data-href="home.html" href="#">Home</a></li>
+                        <li class=""><a data-href="skills.html" href="#">Skills</a></li>
+                        <li class=""><a data-href="projects.html" href="#">Projects</a></li>
+                        <li class=""><a data-href="contacts.html" href="#">Contact me</a></li>
+                    </ul>
                 <!-- Search form -->
                 <form class="navbar-form navbar-right">
                     <div class="input-group">
@@ -32,6 +41,7 @@
                     </span>
                     </div>
                 </form>
+            </div>
             </div>
         </nav>
     </header>
