edited text home

--- a/home.html
+++ b/home.html
@@ -5,13 +5,36 @@
 </head>
 <body>
 <div class = "col-sm-8 center col-md-8 col-md-offset-2">
-    <h1>Hello, folks!</h1>
-    <!--<div class="panel panel-primary">
-        <div class="panel-heading">
-            <h3 class="panel-title">Who the hell are you?</h3>
-        </div>
-        <div class="panel-body">Good question, let me introduce!</div>
-    </div>-->
+    <h1 class="western" align="left">Hello folks!</h1>
+    <p>I'm Luca Mozzo, a 19-year-old Italian student. At the moment I'm
+        pursuing a BSc degree in Computer Science and Intelligent Systems at
+        King's College London.</p>
+    <p>I studied Electronics at high school and, although I changed my
+        major for uni, I don't regret that choice.</p>
+    <p>I'm obsessed with knowledge. My to-do list is infinite, therefore
+        I try, even struggling, to do everything step by step.</p>
+    <p>Fasten the seatbelt and get ready for a massive list of things I
+        planned to do by the end of the Summer (or future plans):</p>
+    <ul>
+        <li><p>Improve my C skills</p>
+        <li><p>Improve my Python skills</p>
+        <li><p>Learn data mining</p>
+        <li><p>Become keen with at least a DMBS</p>
+        <li><p>Learn algorithms. Lots of them</p>
+        <li><p>Get a C2 grade A in English</p>
+        <li><p>Graduate with 1:1 and at least 90%</p>
+        <li><p>Master C# and VB .NET</p>
+    </ul>
+    <p>You may be wondering why the hell I wrote all this stuff here.
+        Well, I admit that my desire of achieving those results is strong and
+        motivates me a lot. Therefore they are important for me now. Short
+        term goals see more progress and as a result you're more motivated.
+    </p>
+    <p>Now you know that I am also a “motivation hacker”. I'm always
+        looking for a mindset that would allow me to concentrate for hours
+        and hence, learning massive amounts of information without feeling
+        the fatigue.</p>
+    <p>That's it for now, check out the other sections for more.</p>
 </div>
 </body>
 </html>
