--- a/home.html
+++ b/home.html
@@ -6,14 +6,15 @@
 <body>
 <div class = "col-sm-8 center col-md-8 col-md-offset-2">
     <h1 class="western" align="left">Hello folks!</h1>
-    <p>I'm Luca Mozzo, a 19-year-old Italian student. At the moment I'm
+    <img src="media/prof_pic.jpg" height="30%" width="30%"/>
+    <p>I'm <strong>Luca Mozzo</strong>, a 19-year-old Italian student. At the moment I'm
         pursuing a BSc degree in Computer Science and Intelligent Systems at
         King's College London.</p>
     <p>I studied Electronics at high school and, although I changed my
         major for uni, I don't regret that choice.</p>
     <p>I'm obsessed with knowledge. My to-do list is infinite, therefore
         I try, even struggling, to do everything step by step.</p>
-    <p>Fasten the seatbelt and get ready for a massive list of things I
+    <p>Fasten the seat belt and get ready for a massive list of things I
         planned to do by the end of the Summer (or future plans):</p>
     <ul>
         <li><p>Improve my C skills</p>
