--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
 </head>
 <body>
-contacts
+<h1 class="western">Contacts</h1>
+<p>Email: <a href="mailto:luca.mozzo.96@gmail.com">luca.mozzo.96@gmail.com</a></p>
+<p>LinkedIn: click <a href="https://uk.linkedin.com/in/lucamozzo/en">here</a></p>
+<p>Github: <a href="http://github.com/lucamozzo">profile</a></p>
+<p>Mobile: please ask me via email</p>
 </body>
 </html>
