--- a/skills.html
+++ b/skills.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
+<div class = "col-sm-8 center col-md-8 col-md-offset-2">
 <h1 class="western">Skills</h1>
 <p>I'm continuously improving my skills. Here are most of them as far
     as I remember (the ones I remember are usually the most important and
@@ -57,5 +58,6 @@
 		native speaker</span></p>
         </ul>
 </ul>
+	</div>
 </body>
 </html>
