--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
 </head>
 <body>
+<div class = "col-sm-8 center col-md-8 col-md-offset-2">
 projects
+    </div>
 </body>
 </html>
