added new profile pic

--- a/home.html
+++ b/home.html
@@ -6,7 +6,8 @@
 <body>
 <div class = "col-sm-8 center col-md-8 col-md-offset-2">
     <h1 class="western" align="left">Hello folks!</h1>
-    <img src="media/prof_pic.jpg" height="30%" width="30%"/>
+    <!--<img src="media/prof_pic.jpg" height="30%" width="30%"/>-->
+    <img src="media/prof.jpg" height="30%" width="30%" />
     <p>I'm <strong>Luca Mozzo</strong>, a 19-year-old Italian student. At the moment I'm
         pursuing a BSc degree in Computer Science and Intelligent Systems at
         King's College London.</p>
