--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div class = "col-sm-8 center col-md-8 col-md-offset-2">
-projects
+More projects coming soon...
     </div>
 </body>
 </html>
