--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Photon by HTML5 UP</title>
+		<title>Luca Mozzo</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,7 +19,7 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon major fa-cloud"></span>
+					
 					<h1>Hi, I'm <strong>Luca Mozzo</strong>, an Italian <br />
 					Computer Science student at King's College London.</h1>
 					<p>I'm currently the Treasurer of <a href="http://kingsrobotics.co.uk">King's Robotics</a> society<br />
