added links for skills and projects

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							<h3>Skills</h3>
 							<p>I developed my skills along with my education path, but mostly self-developed for interest.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="skills.html" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="4u 12u$(medium)">
@@ -119,7 +119,7 @@
 							<h3>Personal projects</h3>
 							<p>I don't let ideas be just ideas! I spend as much time as I can to make them concrete solutions.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="projects.html" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="4u$ 12u$(medium)">
