--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-48549531-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
 	</head>
 	<body>
 
@@ -38,7 +48,7 @@
 							<header class="major">
 								<h2>Let me introduce myself</h2>
 							</header>
-							<p>I'm 19, going for my second year of my Bachelor Degree in <i>Computer Science with Intelligent Systems</i> at King's College London. I'm
+							<p>I'm 19, attending the second year of my Bachelor Degree in <i>Computer Science with Intelligent Systems</i> at King's College London. I'm
 							interested in technology and artificial intelligence and really passionate of what I study.<br />Before enrolling at KCL, I studied at ITT Galileo Ferraris
 							where I graduated in Electronics and also led a team who won a technological national competition.</p>
 						</div>
