--- a/OLD/skills.html
+++ b/OLD/skills.html
@@ -1,63 +1,108 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-</head>
-<body>
-<div class = "col-sm-8 center col-md-8 col-md-offset-2">
-<h1 class="western">Skills</h1>
-<p>I'm continuously improving my skills. Here are most of them as far
-    as I remember (the ones I remember are usually the most important and
-    advanced).</p>
-<p><b>IT and related</b></p>
-<ul>
-    <li><p style="font-weight: normal"><u>C#</u> and <u>Java</u> are
-        surely the programming languages I know better. There's only one
-        difference: they taught me how to program in Java, but not in C#. As
-        you'll see below, most of my skills are self-taught.</p>
-    <li><p style="font-weight: normal"><span style="text-decoration: none">Recently
-	I've been playing around with </span><u>C</u><span style="text-decoration: none">.
-	I believe it's a must-have in order to understand how a computer
-	works. I'm now reading a 800-pages book to understand the useful
-	low-level features of it.</span></p>
-    <li><p style="font-weight: normal"><span style="text-decoration: none">A
-	little bit of </span><u>Assembly</u><span style="text-decoration: none">
-	and assembling in </span><u>HEX</u><span style="text-decoration: none">
-	and </span><u>binary</u><span style="text-decoration: none">, a
-	topic I really enjoyed at uni.</span></p>
-    <li><p style="font-weight: normal"><u>SQL</u><span style="text-decoration: none">
-	is my most recent skill. I'm looking forward to learning it really
-	deeply for at least one DBMS. At the moment I'm using MySQL
-	(University), IBM DB2 and MS SQL Server (home).</span></p>
-    <li><p style="font-weight: normal"><span style="text-decoration: none">As
-	a part of my early experiments in programming I know </span><u>Visual
-        Basic</u><span style="text-decoration: none"> .NET, some VB6 that I
-	had to learn to make an Excel macro, </span><u>Lightswitch</u><span style="text-decoration: none">
-	(reaaally fun, but I didn't have any application to which apply it,
-	therefore </span><span style="text-decoration: none">soon I left it)
-	and other minor skills that at the moment I don't actually remember.</span></p>
-    <li><p style="font-weight: normal"><span style="text-decoration: none">People
-	don't include it any more at some point, but... ECDL certified. I
-	got certified for using MS Office 2007 and Windows XP. And I'm
-	really keen with Windows: speed-up, administration, registry and
-	more. I know Linux too.</span></p>
-</ul>
-<p><b><span style="text-decoration: none">Other skills</span></b></p>
-<ul>
-    <li><p style="font-weight: normal"><span style="text-decoration: none">I
-	had to put </span><u>Electronics</u><span style="text-decoration: none">
-	in this section because I'm still interested in it but it's
-	something people aren't looking for. However studying it at high
-	school gave me a valuable help in understanding the hardware side of
-	the world.</span></p>
-    <li><p style="font-weight: normal"><span style="text-decoration: none">Languages</span></p>
-        <ul>
-            <li><p style="font-weight: normal"><span style="text-decoration: none">English:
-		good enough</span></p>
-            <li><p style="font-weight: normal"><span style="text-decoration: none">Italian:
-		native speaker</span></p>
-        </ul>
-</ul>
-	</div>
-</body>
+<!DOCTYPE HTML>
+<!--
+	Photon by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Luca Mozzo - Skills</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body>
+
+		<!-- Header -->
+			<section id="header">
+				<div class="inner">
+					<header class="major">
+						<h2>Skills</h2>
+					</header>
+				</div>
+			</section>
+		<!-- One -->
+			<section id="one" class="main style1">
+				<div class="container">
+					<div class="row 150%">
+						<div class="12u 12u$(medium)">
+							<header class="major">
+								<h1>Straight to the point.</h1>
+							</header>
+							<h3><b>Technical skills</b></h3>
+							<p>
+								<ul>
+									<li><b>C#</b> and <b>Java</b> are
+										surely the programming languages I know better. My Java learning path is for sure the most complete,
+										as I've taught at Uni. However I've been using C# for more than 3 years now, so it shouldn't be that bad.
+										I also used C# to develop <b>Windows Phone 8.1 apps</b>.</li>
+									<li>Recently
+										I've been playing around with <b>C</b> and <b>C++</b>.
+										I believe they're really useful in order to understand how a computer
+										works. I'm reading a book introducing most aspects of C and the differences with C++, which is showing me
+										how it can be useful to use them in some situations. I've also used them for microprocessors and Arduino programming.</li>
+									<li>I like doing some low-level programming, that's why I learnt a little bit of <b>Assembly</b> (also as a part of a module at Uni).
+										Although I never experimented it with x86 architecture, I believe it's really useful for understanding how a computer actually works.</li>
+									<li>I found <b>SQL</b> really interesting 
+										and I use it mostly with a local database for storing applications data or websites credentials. At the moment I'm using MySQL
+										(University), IBM DB2 and SQLite, but I still have a lot to learn about it. I also know <i>relational database</i> concepts.</li>
+									<li>As
+										a part of my early experiments in programming I know <b>Visual
+										Basic .NET</b>, some VB6 that I
+										had to learn to make an Excel macro to make computations on exported data from a software for my father's company, I tried <b>Lightswitch</b>
+										and I found really fun, but because I didn't have much applications to make, I gave up soon.
+										</li>
+										<li>Although <b>web development</b> is not myfavourite field, I'm pretty much autonomous and I managed to do whatever I needed to do so far.
+										I learnt web development entirely at hackathons, and now that I have decent skills, I'm using it for some projects. I know <b>HTML</b>,<b>CSS</b>,
+										<b>PHP</b>,<b>Javascript</b>,<b>JQuery</b>,<b>MeteorJS</b> and recently I've beeen learning <b>NodeJS</b> with <b>Express</b>.
+										</li>
+									<li>People
+										don't include it any more at some point, but... ECDL certified. I
+										got certified using MS Office 2007 and Windows XP. And I'm
+										really keen with Windows: speed-up, administration, registry and
+										more. I know Linux too.</li>
+								</ul>
+							</p>
+							<h3><b>Language skills</b></h3>
+							<p>
+								<ul>
+									<li><b>Italian</b> - native speaker</li>
+									<li><b>English</b> - advanced/professional level</li>
+									<li><b>Russian</b> - basic level</li>
+								</ul>
+							</p>
+						</div>
+					
+					</div>
+				</div>
+			</section>
+
+		
+		<!-- Footer -->
+			<section id="footer">
+				<ul class="icons">
+					<li><a href="https://twitter.com/LucaMozzo96" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/Luca.Mozzo.21173" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.instagram.com/lucamozzo96/" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/LucaMozzo" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://uk.linkedin.com/in/lucamozzo/en" class="icon alt fa-linkedin"><span class="label">Email</span></a></li>
+					<li><a href="mailto:luca.mozzo.96@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; 2016 Luca Mozzo</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</section>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
