--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
 							<h2>A few words about myself</h2>
 						</header>
 						<div class="content">
-							<p>I worked at Hewlett Packard Enterprise and Babylon Health, and I'm the Chief Technology Officer of Deepfinity.  I graduated from King's College London in Computer Science with Intelligent Systems with the highest final grade and 3 academic awards, and my dissertation was on Spiking Neural Networks.<br/>In my personal life I've been a motocross rider since I was 7, I love wine and I'm interested in corporate finance and securities trading.</p>
+							<p><strong>Ars longa, vita brevis.</strong> I worked at Hewlett Packard Enterprise and Babylon Health, and I'm the Chief Technology Officer of Deepfinity.  I graduated from King's College London in Computer Science with Intelligent Systems with the highest final grade and 3 academic awards, and my dissertation was on Spiking Neural Networks.<br/>In my personal life I've been a motocross rider since I was 7, I love wine and I'm interested in corporate finance and securities trading.</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
 
 				<!-- Section -->
-					<section>
+<!--					<section>
 						<header>
 							<h2>What I do</h2>
 						</header>
 						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
+							<p><strong>Sapere aude.</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
 							<ul class="feature-icons">
 								<li class="icon solid fa-laptop">Consequat tempus</li>
 								<li class="icon solid fa-bolt">Etiam adipiscing</li>
@@ -60,7 +60,7 @@
 							</ul>
 							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 						</div> 
-					</section>
+					</section>-->
 
 				<!-- Section -->
 					<section>
@@ -68,35 +68,34 @@
 							<h2>Portfolio</h2>
 						</header>
 						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+							<p><strong>Acta non verba.</strong> In this section I will showcase some of the work I did. This list is not comprehensive.</p>
+
+							<!-- Section -->
+							<section>
+								<header>
+									<h3>Parcel Tracker</h3>
+									<p>Our flagship product at Deepfinity. <a href="https://parceltracker.com">Parcel Tracker</a> is a parcel management system for receptions. I've been leading development and operations since 2017.</p>
+								</header>
+								<div class="content">
+									<div class="gallery">
+										<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+									</div>
+								</div>
+							</section>
 
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Erat aliquam</h3>
-										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
+										<h3>securcenter.eu</h3>
+										<p>I created the e-commerce website <a href="https://securcenter.eu">securcenter.eu</a> using a custom version of Prestashop. I'm currently developing process automations and managing the operations and cloud infrastructure.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
 											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
-										</div>
-									</div>
-								</section>
-
-							<!-- Section -->
-								<section>
-									<header>
-										<h3>Nisl consequat</h3>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
-									</header>
-									<div class="content">
-										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -406,7 +405,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 						<header>
 							<h2>Get in touch</h2>
 						</header>
-						<div class="content">
+						<!-- <div class="content">
 							<p><strong>Get in touch</strong> by filling the form below</p>
 							<form>
 								<div class="fields">
@@ -424,6 +423,11 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 									<li><input type="submit" value="Send Message" class="button primary" /></li>
 								</ul>
 							</form>
+						</div> -->
+						<div class="content">
+							<div class="gallery">
+								<a href="images/gallery/fulls/home.jpg" class="landscape"><img src="images/gallery/thumbs/home.jpg" alt="" /></a>
+							</div>
 						</div>
 						<footer>
 							<ul class="items">
@@ -442,9 +446,9 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://www.instagram.com/mozzonazionale" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://linkedin.com/in/lucamozzo" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://github.com/LucaMozzo" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
 								</li>
 							</ul>
