--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/pic03.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -444,7 +444,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<li>
 									<h3>Social</h3>
 									<ul class="icons">
-										<li><a href="https://www.instagram.com/mozzonazionale" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.instagram.com/luca_mozzo" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://linkedin.com/in/lucamozzo" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://github.com/LucaMozzo" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
